kubernetes/apps/dashy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  type: ClusterIP
  selector:
    app: dashy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
